4/16 开始挽救屎山危机(划掉)代码重构-->play